@startuml
interface Jeu {
    +void update(double secondes, Clavier clavier)
}

interface DessinJeu {
    +void dessinerJeu(Jeu jeu, Canvas canvas)
}

class Labyrinthe {
    -boolean[][] murs
    -int largeur
    -int hauteur

    +boolean estMur(int x, int y)
    +Perso getPerso()
    +void chargerDepuisFichier(String fichier)
    +void deplacerPerso(sgtring action)
    +boolean etreFini()
    +Monstre getMonstre()
    +void setmur(int x, int y, boolean estmur)
    }

class Perso {
    -int x
    -int y

    +void deplacer(Direction dir, Labyrinthe laby)
    +int getX()
    +int getY()
    +void attaquer(List<Monstre> monstres)
    +etremort()
}

class LabyJeu {

    +void update(double secondes, Clavier clavier)
    +Labyrinthe getLaby()
    +boolean etreFini()
    +Monstre getMonstre()
    +Perso getPerso()
}

class LabyDessin {
    +void dessinerJeu(Jeu jeu, Canvas canvas)
}

class MainLaby {
    +static void main(String[] args)
}

class Monstre{
    -double t=0
    -int v
    -int x
    -int y
    + void deplacerMonstre(Labyrinthe:laby, Perso:perso, double seconde)
    + boolean estSurPosition(int px, int py)
    + int getY()
    + int getX()
    + void prendreDegat(int degats)
    + boolean etremort()
}

Labyrinthe --> "1" Monstre : -monstre
Labyrinthe --> "1" Perso : -perso
LabyJeu --> "1" Labyrinthe : -laby
LabyDessin --> "1" LabyJeu : utilise
MainLaby --> "1" LabyJeu : crée
MainLaby --> "1" LabyDessin : crée
Jeu <|.. LabyJeu
DessinJeu <|.. LabyDessin
@enduml